# 2018_capstone1_ROS_code

./: README.md
김진환교수님 팀 코드/src/: imu_node.py  node2.cpp
김진환교수님 팀 코드/src/ball_detection/: CMakeLists.txt
김진환교수님 팀 코드/src/ball_detection/src/: ball_detect.cpp  ball_detect2 gb.cpp  ball_detect2.cpp  ball_detect2_backup0513.cpp  ball_detect2backup.cpp
김진환교수님 팀 코드/src/balltrack1/: CMakeLists.txt  balltrack1fix.cpp  main.cpp
김진환교수님 팀 코드/src/comm_tcp/: CMakeLists.txt
김진환교수님 팀 코드/src/comm_tcp/msg/: ctrl_data.msg
김진환교수님 팀 코드/src/comm_tcp/src/: client_node.cpp  server_node.cpp  server_node_bakcup.cpp
김진환교수님 팀 코드/src/core_msgs/: CMakeLists.txt
김진환교수님 팀 코드/src/core_msgs/msg/: ball_position.msg
김진환교수님 팀 코드/src/data_integrate/: CMakeLists.txt
김진환교수님 팀 코드/src/data_integrate/src/: data_integration.cpp  data_integration2.cpp  data_show.cpp
김진환교수님 팀 코드/src/data_massage/: CMakeLists.txt  package.xml
김진환교수님 팀 코드/src/data_massage/msg/: BTC.msg  ETHER.msg  QTUM.msg
김진환교수님 팀 코드/src/data_massage/src/: node1.cpp  node11_backuip.cpp  node2_backup0513.cpp  node2_backup0525.cpp  node3.cpp  node3_backup.cpp  node3_backup0529.cpp  node3_backup0530.cpp
김진환교수님 팀 코드/src/image_transport_tutorial/src/: my_subscriber.cpp
김진환교수님 팀 코드/src/launch_rviz/launch/: launch_rviz.launch
김진환교수님 팀 코드/src/rplidar_ros/: README.md
김진환교수님 팀 코드/src/webcam/launch/: union.launch
김진환교수님 팀 코드/src/webcam/src/: webcam_node.cpp  webcam_node2.cpp  webcam_node_backup.cpp
김진환교수님 팀 코드/src/xbox_ctrl/: CMakeLists.txt
김진환교수님 팀 코드/src/xbox_ctrl/src/: sdfs.cpp  xbox_ctrl.cpp  xbox_ctrl2.cpp  xbox_ctrl4.cpp  xbox_ctrl_backup0502.cpp  xbox_ctrl_backup0514.cpp  xbox_ctrl_backup05162.cpp  xbox_ctrl_backup0524.cpp  xbox_ctrl_backup0527.cpp  xbox_ctrl_backup0529.cpp  xbox_ctrl_candi2.cpp  xbox_manual.cpp  xbox_node.cpp
이필승교수님 팀 코드/src/DynamixelSDK/c++/example/protocol1.0/read_write/: read_write.cpp
이필승교수님 팀 코드/src/ball_detection/src/: ball_detect.cpp
이필승교수님 팀 코드/src/core_msgs/: CMakeLists.txt
이필승교수님 팀 코드/src/core_msgs/msg/: ball_position.msg  direction_indicator.msg  station_msg.msg
이필승교수님 팀 코드/src/data_integrate/: CMakeLists.txt
이필승교수님 팀 코드/src/data_integrate/launch/: camera_test.launch  start_kaibot_with_xbox.launch  start_kaibot_without_xbox.launch  total_autocontrol.launch
이필승교수님 팀 코드/src/data_integrate/src/: arrange_test.cpp  data_integration.cpp  data_show.cpp  integration_test.cpp  keyboard_ctrl.cpp  sdk_tutorial.cpp  station_test.cpp  vibration_analysis.cpp
이필승교수님 팀 코드/src/data_integrate/src/linux64/: Makefile
이필승교수님 팀 코드/src/dynamixel_sdk/example/protocol1.0/read_write/linux64/: read_write
이필승교수님 팀 코드/src/image_transport_tutorial/src/: my_publisher.cpp  my_subscriber_law_image.cpp
이필승교수님 팀 코드/src/mixcell-master/QTCode/: mixcell
이필승교수님 팀 코드/src/opencv_detect/: CMakeLists.txt  package.xml
이필승교수님 팀 코드/src/opencv_detect/src/: ball_detect.cpp
이필승교수님 팀 코드/src/webcam/src/: webcam_node.cpp
이필승교수님 팀 코드/src/xbox_ctrl/src/: xbox_ctrl.cpp
